CoqOfSolidity/test/libsolidity/syntaxTests/errors/error_selector_syntax.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Library *)
Module L.
  (* Error E *)
End L.


(* Error E *)

(* Interface *)
Module I.
  (* Error E *)
End I.


(* Contract *)
Module B.
  (* Error E *)
End B.


(* Contract *)
Module C.
  Definition librarySelector : Value.t :=
    M.member_access (|
      M.member_access (|
        M.get_name (| "L" |),
        "E"
      |),
      "selector"
    |).

  Definition freeSelector : Value.t :=
    M.member_access (|
      M.get_name (| "E" |),
      "selector"
    |).

  Definition contractSelector : Value.t :=
    M.member_access (|
      M.member_access (|
        M.get_name (| "B" |),
        "E"
      |),
      "selector"
    |).

  Definition interfaceSelector : Value.t :=
    M.member_access (|
      M.member_access (|
        M.get_name (| "I" |),
        "E"
      |),
      "selector"
    |).

  Definition f (α : list Value.t) : M :=
    match α with
    | [condition] =>
      let _ :=
        M.call (|
          M.get_name (| "assert" |),
          [
            M.bin_op (|
              "==",
              M.get_name (| "librarySelector" |),
              M.member_access (|
                M.member_access (|
                  M.get_name (| "L" |),
                  "E"
                |),
                "selector"
              |)
            |)
          ]
        |) in
      let _ :=
        M.call (|
          M.get_name (| "assert" |),
          [
            M.bin_op (|
              "==",
              M.member_access (|
                M.get_name (| "E" |),
                "selector"
              |),
              M.member_access (|
                M.member_access (|
                  M.get_name (| "B" |),
                  "E"
                |),
                "selector"
              |)
            |)
          ]
        |) in
      let _ :=
        if M.get_name (| "condition" |) then
          M.revert (|
            M.call (|
              M.get_name (| "E" |),
              [
                M.member_access (|
                  M.get_name (| "E" |),
                  "selector"
                |),
                Value.Bool true,
                Value.String "123"
              ]
            |)
          |)
        else
          M.revert (|
            M.call (|
              M.member_access (|
                M.get_name (| "L" |),
                "E"
              |),
              [
                Value.Tuple [
                  M.member_access (|
                    M.member_access (|
                      M.get_name (| "B" |),
                      "E"
                    |),
                    "selector"
                  |)
                ],
                Value.Bool true,
                Value.String "123"
              ]
            |)
          |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.
End C.
